chore: test cc and cxx

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,3 +40,8 @@ jobs:
           which g++
           gcc --version
           g++ --version
+
+          which cc
+          cc --version
+          which c++
+          c++ --version
