fix: soft link path

--- a/action.yml
+++ b/action.yml
@@ -48,15 +48,18 @@ runs:
       shell: bash
       run: |
         if [[ "${{ inputs.cc }}" == "true" ]]; then
-          rm -f /usr/local/bin/cc
-          rm -f /usr/local/bin/c++
-          rm -f /usr/local/bin/gcc
-          rm -f /usr/local/bin/g++
+          rm -f /usr/bin/cc
+          rm -f /usr/bin/c++
+          rm -f /usr/bin/gcc
+          rm -f /usr/bin/g++
 
-          ln -s $(which gcc-${{ env.GCC_VERSION }}) /usr/local/bin/cc
-          ln -s $(which gcc-${{ env.GCC_VERSION }}) /usr/local/bin/gcc
-          ln -s $(which g++-${{ env.GCC_VERSION }}) /usr/local/bin/c++
-          ln -s $(which g++-${{ env.GCC_VERSION }}) /usr/local/bin/g++
+          GCC_PATH=$(which gcc-${{ env.GCC_VERSION }})
+          GXX_PATH=$(which g++-${{ env.GXX_VERSION }})
+
+          ln -s "${GCC_PATH}" /usr/bin/cc
+          ln -s "${GCC_PATH}" /usr/bin/gcc
+          ln -s "${GXX_PATH}" /usr/bin/c++
+          ln -s "${GXX_PATH}" /usr/bin/g++
         fi
 
         if [[ "${{ inputs.env }}" == "true" ]]; then
