chore: test gcov

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,3 +47,6 @@ jobs:
 
           which gcov
           gcov --version
+
+          which gcov-${{ matrix.version }}
+          gcov-${{ matrix.version }} --version
