chore: install gcov

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,5 +48,5 @@ jobs:
           which gcov
           gcov --version
 
-          which gcov-${{ matrix.version }}
-          gcov-${{ matrix.version }} --version
+          which $GCOV
+          $GCOV --version
